syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.dbos.apiary";
option java_outer_classname = "WorkerProto";

package frontend;

service Worker {
  rpc executeFunction (ExecuteFunctionRequest) returns (ExecuteFunctionReply) {}
}

message ExecuteFunctionRequest {
  string name = 1;
  repeated bytes arguments = 2;
  repeated int32 argumentTypes = 3;
}

message ExecuteFunctionReply {
  string reply = 1;
}